# ThoughtDB

./: .env  .gitignore  LICENSE  README.md  app.py  pyproject.toml  test.py
migrations/: 00001_initial_database_design.sql
secrets/: domain.cert  private.key  public.key
src/: __init__.py
src/app/: Collection.py  Conversation.py  Document.py  Organization.py  VectorTool.py
src/routes/: thought_db_api.py
tests/: test_memory.py  test_organization.py  warandpeace.txt
thoughtdb/: .env.sample  Collection.py  Conversation.py  Core.py  Document.py  Memory.py  Organization.py  VectorStore.py  VectorTool.py  __init__.py  app.sample
thoughtdb/app/: Collection.py  Conversation.py  Core.py  Document.py  Organization.py
thoughtdb/migrations/: 00001_initial_database_design.sql  00002_add_relevant_indexes.sql  00003_populate_zero_index_data.sql
thoughtdb/routes/: api.py
