[tool.poetry]
name = "thoughtdb"
version = "0.1.0"
description = "ThoughtDB is a mix between relational and vector database for efficient data retrieval"
authors = ["Andre van Zuydam <andrevanzuydam@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tina4-python = "^0.1.93"
numpy = "^2.0.1"
llama-cpp-python = "0.2.83"
sqlite-vec = "^0.1.1"
cleantext = "^1.1.4"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
