[tool.poetry]
name = "thoughtdb"
version = "0.1.4"
description = "ThoughtDB is a mix between relational and vector database for efficient data retrieval"
authors = ["Andre van Zuydam <andrevanzuydam@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
tina4-python = "0.2.3"
numpy = "^2.0.1"
nltk="3.8.1"
sqlite-vec = "^0.1.1"
cleantext = "^1.1.4"
thought = "^0.1.3"
watchdog = "^4.0.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
